--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -36,14 +36,70 @@ const posts = (await getCollection('blog')).sort(
 	<body>
 		<Header />
 		<main>
+			<div class="bg-white px-6 pt-24 sm:pt-32 lg:px-8">
+				<div class="mx-auto max-w-2xl text-center">
+				  <p class="text-base font-semibold leading-7 text-indigo-600">Get the help you need</p>
+				  <h2 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Support center</h2>
+				  <p class="mt-6 text-lg leading-8 text-gray-600">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+				</div>
+			  </div>
+
+
+			  <div class="bg-tertiary py-12 ">
+				<div class="mx-auto max-w-7xl px-6 lg:px-8">
+				
+
+				  <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+					{posts.map((post) => (
+					<article class="flex flex-col items-start justify-between">
+					  <div class="relative w-full">
+						<img src={post.data.heroImage} alt="" class="aspect-[16/9] w-full rounded-2xl bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
+						<div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div>
+					  </div>
+					  <div class="max-w-xl">
+						<div class="mt-8 flex items-center gap-x-4 text-xs">
+						  <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
+						  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+						</div>
+						<div class="group relative">
+						  <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+							<a href="#">
+							  <span class="absolute inset-0"></span>
+							  Boost your conversion rate
+							</a>
+						  </h3>
+						  <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.</p>
+						</div>
+						<div class="relative mt-8 flex items-center gap-x-4">
+						  <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-100">
+						  <div class="text-sm leading-6">
+							<p class="font-semibold text-gray-900">
+							  <a href="#">
+								<span class="absolute inset-0"></span>
+								Michael Foster
+							  </a>
+							</p>
+							<p class="text-gray-600">Co-Founder / CTO</p>
+						  </div>
+						</div>
+					  </div>
+					</article>
+					))}
+			  
+					<!-- More posts... -->
+				  </div>
+				</div>
+			  </div>
+			  
+			  
 
 	
 			<section>
-				<div class="bg-white py-24 sm:py-32">
+				<div class="bg-tertiary py-24 sm:py-32">
 					<div class="mx-auto max-w-8xl px-6 lg:px-8">
 					  <div class="mx-auto max-w-2xl lg:max-w-4xl">
-						<h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Featured Insights</h2>
-						<p class="mt-2 text-lg leading-8 text-white">Learn how to grow your business with our expert advice.</p>
+						<h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">Featured Insights</h2>
+						<p class="mt-2 text-lg leading-8 text-black">Learn how to grow your business with our expert advice.</p>
 						<div class="mt-16 space-y-20 lg:mt-20 lg:space-y-20">
 							{posts.map((post) => (
 
@@ -54,26 +110,26 @@ const posts = (await getCollection('blog')).sort(
 							</div>
 							<div>
 							  <div class="flex items-center gap-x-4 text-xs">
-								<time datetime="2020-03-16" class="text-white">Mar 16, 2020</time>
-								<a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-white hover:bg-gray-100">Marketing</a>
+								<time datetime="2020-03-16" class="text-black">Mar 16, 2020</time>
+								<a href="#" class="relative z-10 rounded-full bg-primary/20 px-3 py-1.5 font-medium text-primary hover:bg-gray-100">Marketing</a>
 							  </div>
 							  <div class="group relative max-w-xl">
-								<h3 class="mt-3 text-lg font-semibold leading-6 text-white group-hover:text-white">
+								<h3 class="mt-3 text-lg font-semibold leading-6 text-black group-hover:text-black">
 									<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
 								</h3>
-								<p class="mt-5 text-sm leading-6 text-white">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel iusto corrupti dicta laboris incididunt.</p>
+								<p class="mt-5 text-sm leading-6 text-black">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel iusto corrupti dicta laboris incididunt.</p>
 							  </div>
 							  <div class="mt-6 flex border-t border-gray-900/5 pt-6">
 								<div class="relative flex items-center gap-x-4">
 								  <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-50">
 								  <div class="text-sm leading-6">
-									<p class="font-semibold text-white">
+									<p class="font-semibold text-black">
 									  <a href="#">
 										<span class="absolute inset-0"></span>
 										Michael Foster
 									  </a>
 									</p>
-									<p class="text-white">Co-Founder / CTO</p>
+									<p class="text-black">Co-Founder / CTO</p>
 								  </div>
 								</div>
 							  </div>
