--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,11 +109,11 @@ const featured = [
 				  <div class="mx-auto max-w-2xl">
 					<div class="max-w-2xl">
 
-					  <div class="mt-24 sm:mt-32 lg:mt-16">
+					  <div class="pt-24 sm:mp-32 lg:pt-16">
 						<a href="#" class="inline-flex space-x-6">
 						 
 						  <span class="inline-flex items-center space-x-2 text-lg font-bold leading-6 text-secondary ">
-							<span>#1 Platform in the wolrd just shipped v0.1.0</span>
+							<span>#1 Platform in the world just shipped v0.1.0</span>
 							<svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 							  <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
 							</svg>
@@ -132,7 +132,7 @@ const featured = [
 				<div class="mt-20  md:mx-auto md:max-w-2xl lg:mx-0 lg:mt-0 lg:w-screen">
 		
 				  <div class="">
-					<lottie-player src="https://assets9.lottiefiles.com/packages/lf20_myejiggj.json"  background="transparent"  speed="0.5"  style="width: 700px; height: 700px;"  loop  autoplay></lottie-player>
+					<lottie-player class="max-w-md lg:max-w-4xl" src="https://assets9.lottiefiles.com/packages/lf20_myejiggj.json"  background="transparent"  speed="0.5"  style="width: 700px; height: 700px;"  loop  autoplay></lottie-player>
 				  </div>
 				</div>
 			  </div>
