--- a/src/pages/product-design.astro
+++ b/src/pages/product-design.astro
@@ -28,26 +28,26 @@ import Header from "../components/Header.astro";
               <rect width="100%" height="100%" stroke-width="0" fill="url(#e87443c8-56e4-4c20-9111-55b82fa704e3)" />
             </svg>
             <figure class="border-l border-primary pl-8">
-              <blockquote class="text-xl font-semibold leading-8 tracking-tight text-white">
+              <blockquote class="text-xl font-semibold leading-8 tracking-tight text-black">
                 <p>“TecPlus has been a game changer in our software development. They've empowered us with cutting-edge technologies that have helped accelerate our digital transformation journey.”</p>
               </blockquote>
               <figcaption class="mt-8 flex gap-x-4">
                 <img src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="mt-1 h-10 w-10 flex-none rounded-full bg-gray-50">
                 <div class="text-sm leading-6">
-                  <div class="font-semibold text-white">John Doe</div>
-                  <div class="text-white">@johndoe</div>
+                  <div class="font-semibold text-black">John Doe</div>
+                  <div class="text-black">@johndoe</div>
                 </div>
               </figcaption>
             </figure>
           </div>
           <div class="max-w-xl text-base leading-7 text-gray-700 lg:col-span-7">
             <p>We bring a unique approach to software development, combining our expertise in UX/UI design, open source software, and a range of technologies including Node.js, React, TypeScript, and GraphQL.</p>
-            <ul role="list" class="mt-8 max-w-xl space-y-8 text-white">
+            <ul role="list" class="mt-8 max-w-xl space-y-8 text-black">
               <li class="flex gap-x-3">
                 <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
                 </svg>
-                <span><strong class="font-semibold text-white">API Development.</strong> We build robust and scalable APIs to ensure your applications are always running at their best.</span>
+                <span><strong class="font-semibold text-black">API Development.</strong> We build robust and scalable APIs to ensure your applications are always running at their best.</span>
               </li>
               <li class="flex gap-x-3">
                 <svg class="mt-1 h-5 w-5 flex-none text-primary" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -90,17 +90,17 @@ import Header from "../components/Header.astro";
                 <use href="#0ef284b8-28c2-426e-9442-8655d393522e" x="86" />
               </svg>
               <img src="https://tailwindui.com/img/logos/workcation-logo-white.svg" alt="" class="h-12 w-auto">
-              <blockquote class="mt-6 text-xl font-semibold leading-8 text-white">
+              <blockquote class="mt-6 text-xl font-semibold leading-8 text-black">
                 <p>“Amet amet eget scelerisque tellus sit neque faucibus non eleifend. Integer eu praesent at a. Ornare arcu gravida natoque erat et cursus tortor.”</p>
               </blockquote>
-              <figcaption class="mt-6 text-sm leading-6 text-white"><strong class="font-semibold text-white">Judith Rogers,</strong> CEO at Workcation</figcaption>
+              <figcaption class="mt-6 text-sm leading-6 text-black"><strong class="font-semibold text-black">Judith Rogers,</strong> CEO at Workcation</figcaption>
             </figure>
           </div>
         </div>
         <div>
             <div class="text-base leading-7 text-gray-700 lg:max-w-lg">
               <p class="text-base font-semibold leading-7 text-primary">Company values</p>
-              <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">Building Next-Gen Tech Solutions</h1>
+              <h1 class="mt-2 text-3xl font-bold tracking-tight text-black sm:text-4xl">Building Next-Gen Tech Solutions</h1>
               <div class="max-w-xl">
                 <p class="mt-6">TecPlus is focused on empowering businesses with innovative tech solutions. We believe that technology has the power to transform every aspect of our lives and we are committed to making this transformation possible for businesses.</p>
                 <p class="mt-8">Our team of experts collaborates with businesses to understand their challenges and offers customized solutions to help them overcome these hurdles. We leverage state-of-the-art technologies to build scalable, robust, and efficient solutions for our clients.</p>
