--- a/src/pages/product-design.astro
+++ b/src/pages/product-design.astro
@@ -90,10 +90,10 @@ import Header from "../components/Header.astro";
                 <use href="#0ef284b8-28c2-426e-9442-8655d393522e" x="86" />
               </svg>
               <img src="https://tailwindui.com/img/logos/workcation-logo-white.svg" alt="" class="h-12 w-auto">
-              <blockquote class="mt-6 text-xl font-semibold leading-8 text-black">
+              <blockquote class="mt-6 text-xl font-semibold leading-8 text-white">
                 <p>“Amet amet eget scelerisque tellus sit neque faucibus non eleifend. Integer eu praesent at a. Ornare arcu gravida natoque erat et cursus tortor.”</p>
               </blockquote>
-              <figcaption class="mt-6 text-sm leading-6 text-black"><strong class="font-semibold text-black">Judith Rogers,</strong> CEO at Workcation</figcaption>
+              <figcaption class="mt-6 text-sm leading-6 text-white"><strong class="font-semibold text-white">Judith Rogers,</strong> CEO at Workcation</figcaption>
             </figure>
           </div>
         </div>
