--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,59 +39,59 @@
 			<div class="p-4">
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
 				<div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
-				  <svg class="h-6 w-6 text-white group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+				  <svg class="h-6 w-6 text-black group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
 					<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="/product-design" class="block font-bold text-white">
+				  <a href="/product-design" class="block font-bold text-black">
 					Product Design & Engineering
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-white">We collaborate to bring change</p>
+				  <p class="mt-1 text-black">We collaborate to bring change</p>
 				</div>
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
 				<div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
-				  <svg class="h-6 w-6 text-white group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+				  <svg class="h-6 w-6 text-black group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M15.042 21.672L13.684 16.6m0 0l-2.51 2.225.569-9.47 5.227 7.917-3.286-.672zM12 2.25V4.5m5.834.166l-1.591 1.591M20.25 10.5H18M7.757 14.743l-1.59 1.59M6 10.5H3.75m4.007-4.243l-1.59-1.59" />
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="/ux-ui" class="block font-bold text-white">
+				  <a href="/ux-ui" class="block font-bold text-black">
 					UX/UI Design
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-white">Speak directly to your customers</p>
+				  <p class="mt-1 text-black">Speak directly to your customers</p>
 				</div>
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
 				<div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
-				  <svg class="h-6 w-6 text-white group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+				  <svg class="h-6 w-6 text-black group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="#" class="block font-bold text-white">
+				  <a href="#" class="block font-bold text-black">
 					Security
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-white">Protect Your customers data</p>
+				  <p class="mt-1 text-black">Protect Your customers data</p>
 				</div>
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
 				<div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
-				  <svg class="h-6 w-6 text-white group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+				  <svg class="h-6 w-6 text-primary group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 002.25-2.25V6a2.25 2.25 0 00-2.25-2.25H6A2.25 2.25 0 003.75 6v2.25A2.25 2.25 0 006 10.5zm0 9.75h2.25A2.25 2.25 0 0010.5 18v-2.25a2.25 2.25 0 00-2.25-2.25H6a2.25 2.25 0 00-2.25 2.25V18A2.25 2.25 0 006 20.25zm9.75-9.75H18a2.25 2.25 0 002.25-2.25V6A2.25 2.25 0 0018 3.75h-2.25A2.25 2.25 0 0013.5 6v2.25a2.25 2.25 0 002.25 2.25z" />
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="/staffing" class="block font-bold text-white">
+				  <a href="/staffing" class="block font-bold text-black">
 					Staffing
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-white">We connect you with trained experts</p>
+				  <p class="mt-1 text-black">We connect you with trained experts</p>
 				</div>
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
