--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -96,27 +96,27 @@
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
 				<div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
-				  <svg class="h-6 w-6 text-white group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+				  <svg class="h-6 w-6 text-primary group-hover:text-primary" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="/automations" class="block font-bold text-white">
+				  <a href="/automations" class="block font-bold text-primary">
 					E-commerce Automations
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-white">Build strategic funnels that will convert</p>
+				  <p class="mt-1 text-black">Build strategic funnels that will convert</p>
 				</div>
 			  </div>
 			</div>
 			<div class="grid grid-cols-2 divide-x divide-gray-900/5 bg-gray-50">
-			  <a href="#" class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-bold leading-6 text-white hover:bg-gray-100">
+			  <a href="#" class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-bold leading-6 text-black hover:bg-gray-100">
 				<svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 				  <path fill-rule="evenodd" d="M2 10a8 8 0 1116 0 8 8 0 01-16 0zm6.39-2.908a.75.75 0 01.766.027l3.5 2.25a.75.75 0 010 1.262l-3.5 2.25A.75.75 0 018 12.25v-4.5a.75.75 0 01.39-.658z" clip-rule="evenodd" />
 				</svg>
 				Watch demo
 			  </a>
-			  <a href="#" class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-bold leading-6 text-white hover:bg-gray-100">
+			  <a href="#" class="flex items-center justify-center gap-x-2.5 p-3 text-sm font-bold leading-6 text-black hover:bg-gray-100">
 				<svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 				  <path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 013.5 2h1.148a1.5 1.5 0 011.465 1.175l.716 3.223a1.5 1.5 0 01-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 006.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 011.767-1.052l3.223.716A1.5 1.5 0 0118 15.352V16.5a1.5 1.5 0 01-1.5 1.5H15c-1.149 0-2.263-.15-3.326-.43A13.022 13.022 0 012.43 8.326 13.019 13.019 0 012 5V3.5z" clip-rule="evenodd" />
 				</svg>
