--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,13 @@ const featured = [
 						</a>
 					  </div>
 					  <h1 class="mt-10 text-5xl font-bold tracking-tight text-white sm:text-6xl">Transforming <span class="gradient-1">Visions</span> into Powerful <span class="gradient-2">Realities</span></h1>
-					  <p class="mt-6 text-lg leading-8 text-white">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+					  <p class="mt-6 text-lg leading-8 text-white">
+						We bring a new level experience in software design. Combining new technologies and mature practice to achieve enterprise ready results in
+						a fraction of the time. 
+<br />
+<br />
+With recognition of our work in UX/UI, product development, and API platform development, we provide the confidence to invest in your products from day 1.
+					  </p>
 					  <div class="mt-10 flex items-center gap-x-6">
 					<a href="#" class="rounded-md bg-primary px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">Documentation</a>
 						<a href="#" class="text-sm font-semibold leading-6 text-white">View on GitHub <span aria-hidden="true">→</span></a>
