--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -163,7 +163,7 @@
 	  </div>
 	</nav>
 	<!-- Mobile menu, show/hide based on menu open state. -->
-	<div class="lg:hidden" x-data="hide"  role="dialog" aria-modal="true">
+	<div x-data="{ open: false }" class="lg:hidden" x-data="hide"  role="dialog" aria-modal="true">
 	  <!-- Background backdrop, show/hide based on slide-over state. -->
 	  <div class="fixed inset-0 z-10"></div>
 	  <div x-show="open"  class="fixed inset-y-0 right-0 z-10 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
@@ -172,7 +172,7 @@
 			<span class="sr-only">Your Company</span>
 			<img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
 		  </a>
-		  <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
+		  <button @click="open = !open" type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
 			<span class="sr-only">Close menu</span>
 			<svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
 			  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
